k8s/backend-deployment.template.yaml
# This is a template file for k8s deployment for a backend deyployment
# Variables should be injected (and will be using "envsubst" GH Action) using GH Action
# This file wont be used explicitly with "kubectl"
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dashboard-backend-deployment
spec:
    replicas: 2
    selector:
        matchLabels:
            app: dashboard-backend
    template:
        metadata:
            labels:
                app: dashboard-backend
        spec:
            containers:
                - name: dashboard-backend
                  image: $BACKEND_IMAGE
                  imagePullPolicy: Always
