k8s/cli-backend-deployment.template.yaml
# This is a template file for k8s deployment for a cli-backend deyployment
# Variables should be injected (and will be using "envsubst" GH Action) using GH Action
# This file won't be used explicitly with "kubectl"
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dashboard-cli-backend-deployment
spec:
    replicas: 2
    selector:
        matchLabels:
            app: dashboard-cli-backend
    template:
        metadata:
            labels:
                app: dashboard-cli-backend
        spec:
            containers:
                - name: dashboard-cli-backend
                  image: '$CLI_BACKEND_IMAGE'
                  imagePullPolicy: Always
