k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: backend-service
spec:
    selector:
        app: backend
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
