k8s/cli-backend-service.template.yaml
#* This is a template file for k8s service for a cli-backend service
#* Variables should be injected (and will be using "envsubst" GH Action) using GH Action
#* This file wont be used explicitly with "kubectl"
apiVersion: v1
kind: Service
metadata:
    name: cli-backend-service
spec:
    selector:
        app: dashboard-cli-backend
    #* Why NodePort - https://stackoverflow.com/a/73582930/9105207
    type: NodePort
    ports:
        - name: https
          protocol: TCP
          port: $PORT
          targetPort: $PORT
