k8s/cli-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: cli-backend-service
spec:
    selector:
        app: cli-backend
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
